Change List
=========
Version 1.0.27 (Build 2021062400)
-added export file feature
-added delete remote files feature (currently disabled)
-added secure playback urls (needs more work)

Version 1.0.26 (Build 2021052000)
-Added Bahrain and Capetown as regions

Version 1.0.25 (Build 2021042800)
- Made transcription:none, the default
- Hard coded transcoding, and removed the option to opt out of it. We always need it.

Version 1.0.24 (Build 2021032600)
-Unneeded "gggg" appended to name of the audio recorder field on the student view.

Version 1.0.23 (Build 2021022701)
- Tweak for responsiveness on some themes without width 100% set on form-control-static

Version 1.0.22 (Build 2021022700)
--CSS tweaks for responsive recorders on old browsers

Version 1.0.20 (Build 2021022100)
-Made recorders display better on small screen devices

Version 1.0.19 (Build 2021011600)
- better reporting of unregistered url in admin settings

Version 1.0.18 (Build 2020110400)
- fixed inability to turn off transcription
- added "safe save" setting

Version 1.0.17 (Build 2020090100)
- hide size options on settings form if cloudpoodll disabled

Version 1.0.16 (Build 2020082400)
- better display options for audio and video

Version 1.0.16 (Build 202004100)
- enabled hiding cloudpoodll settings on assign edit page if not enabled

Version 1.0.15 (Build 2020012200)
-added languages(arabic, chinese, portuguese, japanese, tamil, telegu, dutch, farsi, wales english, ireland english, scotland english, russian, turkish, malay, indonesian,hebrew, swiss german)
-added user tagging

Version 1.0.14 (Build 2019112100)
-added better reporting of poor Cloud Poodll config settings
-made recorder title customizable
-corrected strings referringto ReadAloud
-fixed incorrect en-UK lang code (correct is en-GB)
-added word count to transcript display
-display shortened transcript and word count on view submissions page
-display view page link on view submissions page
-Optimisations of cron task