@@ -48,6 +48,7 @@ const SKIN_123 = 'onetwothree';
 const SKIN_FRESH = 'fresh';
 const SKIN_ONCE = 'once';
 const SKIN_UPLOAD = 'upload';
+const SKIN_SCREEN = 'screen';
 
 const FALLBACK_UPLOAD = 'upload';
 const FALLBACK_IOSUPLOAD = 'iosupload';
