@@ -7,11 +7,11 @@
 <head>
     <title>Poodll Recorder</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="https://cloud.poodll.com/local/cpapi/cloudstyles.css?v=021">
+    <link rel="stylesheet" type="text/css" href="https://cloud.poodll.com/local/cpapi/cloudstyles.css?v=022">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="https://cloud.poodll.com/local/cpapi/fastpoodllconfig.js?v=001"></script>
     <script type="text/javascript" src="https://cloud.poodll.com/local/cpapi/lib/requirejs/require.js"></script>
-    <script type="text/javascript" src="https://cloud.poodll.com/local/cpapi/poodllloader.min.js?v=011"></script>
+    <script type="text/javascript" src="https://cloud.poodll.com/local/cpapi/poodllloader.min.js?v=012"></script>
 
 
     <style type="text/css">
